<resources>
    <string name="app_name">MVVMCleanTemplate</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_details">Please enter your details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="empty_email_field">Email is empty</string>
    <string name="empty_password_field">Password is empty</string>
    <string name="invalid_email_msg">Please enter valid email</string>
    <string name="email_address">Email address</string>
    <string name="resend_code">Resend Code</string>
    <string name="send_code">Send Code</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forgot_password_note">Enter your registered email address below. A verification code will be sent to help you reset your password.</string>
</resources>