<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivPrinter"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/heading_text_color"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivPrinter"
        app:layout_constraintStart_toStartOf="@id/ivPrinter"
        app:layout_constraintTop_toBottomOf="@id/ivPrinter" />

    <TextView
        android:id="@+id/tvEnterRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/forgot_password_note"
        android:textColor="@color/heading_text_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/ivPrinter"
        app:layout_constraintStart_toStartOf="@id/ivPrinter"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/email_address"
        android:textColor="@color/heading_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvEnterRegistration"
        app:layout_constraintTop_toBottomOf="@id/tvEnterRegistration" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ipInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:background="@drawable/bg_input_rounded"
        android:padding="3dp"
        app:boxStrokeColor="@color/primary_color"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/enter_email_address"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/subheading_text_color"
            android:textColorHint="@color/subheading_text_color"
            android:textSize="14sp"
            app:hintTextColor="@color/subheading_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/ipInputLayout"
        app:layout_constraintStart_toStartOf="@id/ipInputLayout"
        app:layout_constraintTop_toBottomOf="@id/ipInputLayout">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_input_rounded"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_color"
            app:layout_constraintStart_toStartOf="@id/ipInputLayout"
            app:layout_constraintTop_toBottomOf="@id/ipInputLayout" />

        <TextView
            android:id="@+id/btnSendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/send_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCancel"
            app:layout_constraintTop_toBottomOf="@id/ipInputLayout" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>